# CD-Dashboard

./: .env  .env.example  .eslintrc.cjs  .gitignore  README.md  analysis_results.md  coursedog-api-endpoints.md  duplicates.py  eslint.config.cjs  index.html  list_schools.py  package-lock.json  package.json  schools.json  summarize_schools.py  update_aliases.py  vite.config.ts
.github/: copilot-instructions.md
assets/: index-4OVTZI-2.css  index-BHgC6GxZ.js  index-BLzgAwJx.js  index-BMdYzFR5.css  index-Bd-afcMP.js  index-BurX-q05.css  index-CEukx4PT.js  index-CMLI-iwL.css  index-CVu6YAIr.css  index-Clx9f4po.css  index-CznvZJJN.js  index-DJIELPvO.js  index-DoHs5mSc.js  index-PHS76ZjU.js  index-Qg9SGtmr.css  index-bRCAtNwb.js  index-rcTpbDXZ.js
client-health-backend/: .env  .env.example  README.md  check_merge.py  client_health.db  dev_school_sample.json  pyproject.toml  run_backfill.py  test_stanford.py
client-health-backend/app/: db.py  main.py  models.py  routes.py  school_names.py  security.py
client-health-backend/scripts/: backfill_school_display_names.py  check_merge.py  export_static_data.py  reconcile_manual_exclusions.py  run_backfill.py  test_stanford.py
client-health-backend/tests/: test_app.py
scratch/: api_test.cjs
scripts/: api_test.cjs  duplicates.py  export-static-data.sh  install-static-publish-launchd.sh  list_schools.py  publish-static-site.sh  setup-dev.sh  summarize_schools.py  update_aliases.py
src/: App.vue  style.css  vite-env.d.ts
src/api/: index.spec.ts  index.ts  static.ts
src/config/: runtime.ts
static-data/: manifest.json
(+1041 files in other folders)
